xfsprogs-1.3.0 (19 Jul 2001)
	- reworked Makefiles to use libtool
	- new libdisk to allow sharing of generic mount/disk code and
	- also abstracts individual driver support (LVM, MD, XVM..)
	- partition table detection so mkfs.xfs doesn't blindly overwrite
	- small xfs_repair bug fix from Steve

xfsprogs-1.2.8 (02 Jul 2001)
	- fixed a bug in libxfs /etc/mtab read-only mount detection
	- first try procfs, fall back to /etc/mtab, for read-only mounts
	- sync with recent mount code changes for reiserfs and ext3 probes
	- fix logprint build problem under gcc 3.0

xfsprogs-1.2.7 (22 May 2001)
	- new xfs_freeze(8) command - volume manager snapshot helper

xfsprogs-1.2.6 (15 May 2001)
	- merge support for -d agsize=/su=/sw= (AG, stripe unit/width size)
	- merge support for dynamic configuration of default log size
	- document these and fix a couple of man page typos too

xfsprogs-1.2.5 (07 May 2001)
	- fix missing Makefile include entries for LVM headers
	- configure script default man path now /usr/share/man
	- add experimental xfs_rtcp (realtime copy) command
	- powerpc build failure fixups - thanks to Robert Ramiega
	- cleanup arch-specific code, esp. the byteswab routines
	- as a result, move to -O1 as default for extern inlines

xfsprogs-1.2.4 (01 May 2001)
	- added -L option to mkfs.xfs (filesystem label)

xfsprogs-1.2.3 (27 April 2001)
	- add dquot and quotaoff log item support into xfs_logprint
	- fix logprint core dump reporting AGI in "continue"'d transactions

xfsprogs-1.2.2 (09 April 2001)
	- fix problem in xfs_db (check) group quota logic
	- fixes to warnings from recent gcc and/or 64-bit builds

xfsprogs-1.2.1 (04 April 2001)
	- sync up with recent changes to XFS kernel headers

xfsprogs-1.2.0 (01 April 2001)
	- support for group quota added
	- some headers updated, in particular <xqm.h>
	- now in late stages of beta

xfsprogs-1.1.9 (26 March 2001)
	- added automagic stripe unit/stripe width extraction for MD devices

xfsprogs-1.1.8 (23 March 2001)